# Food_recommendation

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt
backend/: config.py
backend/models/: custom_tables.py
backend/routers/: auth.py  food.py  health.py  recommendation.py  user.py
backend/schema/: auth.py  food.py  health.py  recommendation.py  user.py
backend/services/: knn_recommender.py
backend/utils/: auth.py  constants.py  database.py  logger.py
data/: Food_nutrition.csv  Foods_nutrition.csv  health_condition.csv  normalized_health_conditions.csv
frontend/: app.py
frontend/pages/: all_foods.py  health_conditions.py  login.py  logout.py  profile.py  recommendations.py  register.py
frontend/utils/: __init__.py  api_client.py
scripts/: algorithem_explaination.py  check_data_files.py  cosine_similarity.py  create_health_condition.py  create_tables.py  load_data.py
